# weiroll

./: .gitignore  .windsurfrules  CLAUDE.md  README.md  README_python.md  debug_report.md  demo.py  demo_rich_renderer.py  demo_subplan.py  demo_tree_renderer.py  pyproject.toml  test_fix.py  tree_demo.py
contracts/: AuthVM.sol  AuthVMFactory.sol
contracts/auth/: DSAuth.sol
contracts/test/: TestAuthVM.sol
docs/: CONCEPTS.md  README.md  SDK_USAGE.md  examples.md  index.md  python_sdk.md  solidity_integration.md
src/weiroll/: __init__.py  command.py  constants.py  contract.py  decoder.py  exceptions.py  planner.py  values.py
src/weiroll/utils/: __init__.py  formatters.py  html_renderer.py  rich_renderer.py  terminal_colors.py  tree_renderer.py
test/: auth_vm.js
tests/: conftest.py  test_ape_integration.py  test_array_ape.py  test_array_basic.py  test_command.py  test_contract_adapters.py  test_decode_arrays.py  test_decoder.py  test_ethpm_integration.py  test_integration.py  test_integration_ape.py  test_js_compat.py  test_planner.py  test_rawvalue.py  test_repr_html.py  test_subplan.py  test_tree_comparison.py  test_tuple.py
tests/tests/test_array/: test_array_ape.py  test_decode_arrays.py
