[project]
name = "weiroll"
version = "0.1.0"
description = "Python SDK for Weiroll - a simple and efficient operation-chaining language for the EVM"
readme = "README.md"
authors = [
    { name = "banteg", email = "4562643+banteg@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "eth-abi>=4.0.0",
    "eth-utils>=2.0.0",
    "safe-pysha3>=1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weiroll"]
