[project]
name = "weiroll"
version = "0.1.0"
description = "Python SDK for Weiroll - a simple and efficient operation-chaining language for the EVM"
readme = "README.md"
authors = [
    { name = "banteg", email = "4562643+banteg@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorcet>=3.1.0",
    "eth-abi>=4.0.0",
    "eth-utils>=2.0.0",
    "safe-pysha3>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weiroll"]

[dependency-groups]
dev = [
    "eth-ape[recommended-plugins]>=0.8.29",
    "marimo>=0.11.12",
    "pytest-mock>=3.14.0",
    "pytest>=7.0.0",
    "ruff>=0.9.9",
]

[tool.ape.foundry]
host = "auto"

[tool.ape.ethereum]
default_network = "mainnet-fork"

[tool.ape.ethereum.mainnet_fork]
default_provider = "foundry"

[tool.ape.node.ethereum.mainnet]
url = "http://127.0.0.1:8545"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "RUF"]
ignore = ["E501", "B007", "B904"]
